tests/fixtures/valid/docs_early_return.lby
fn early value i64 -> i64
    if value > 10
        return value
    10
