tests/fixtures/invalid/conditional_condition_not_bool.lby
fn main -> i64
    5 if 3 else 7
